// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu-Items-List component matches the snapshot when dishes found 1`] = `
<DocumentFragment>
  <div
    class="container"
    data-testid="filtered-items"
    id="items-list"
  >
    <div
      class="dish"
    >
      <img
        alt=""
        class="photo"
        src="undefinedhttp://127.0.0.1:8000/media/img/food/foodimg1.png"
      />
      <img
        alt=""
        class="like"
        src="undefined/media/img/Heart.svg"
      />
      <div
        class="info"
      >
        <div
          class="item-cat"
        >
          <img
            alt=""
            src="test-file-stub"
            style="width: 70px;"
          />
          <h4>
            Cookie
          </h4>
        </div>
        <div
          class="time-rating"
        >
          <p>
            ~30min
          </p>
          <div>
            <img
              alt=""
              src="undefined/media/img/Star.svg"
            />
            <p
              data-testid="item-rate"
            >
              5
            </p>
          </div>
        </div>
        <div
          class="price-add"
        >
          <h5
            data-testid="item-cost"
          >
            12
            <span>
              .99
            </span>
          </h5>
          <img
            alt=""
            src="test-file-stub"
            style="width: 45px; margin-left: 80px;"
          />
        </div>
      </div>
    </div>
    <div
      class="dish"
    >
      <img
        alt=""
        class="photo"
        src="undefinedhttp://127.0.0.1:8000/media/img/food/SweDish.png"
      />
      <img
        alt=""
        class="like"
        src="undefined/media/img/Heart.svg"
      />
      <div
        class="info"
      >
        <div
          class="item-cat"
        >
          <img
            alt=""
            src="test-file-stub"
            style="width: 70px;"
          />
          <h4>
            Swe Dish
          </h4>
        </div>
        <div
          class="time-rating"
        >
          <p>
            ~30min
          </p>
          <div>
            <img
              alt=""
              src="undefined/media/img/Star.svg"
            />
            <p
              data-testid="item-rate"
            >
              4.9
            </p>
          </div>
        </div>
        <div
          class="price-add"
        >
          <h5
            data-testid="item-cost"
          >
            19
            <span>
              .99
            </span>
          </h5>
          <img
            alt=""
            src="test-file-stub"
            style="width: 45px; margin-left: 80px;"
          />
        </div>
      </div>
    </div>
    <div
      class="dish"
    >
      <img
        alt=""
        class="photo"
        src="undefinedhttp://127.0.0.1:8000/media/img/food/foodimg1.png"
      />
      <img
        alt=""
        class="like"
        src="undefined/media/img/Heart.svg"
      />
      <div
        class="info"
      >
        <div
          class="item-cat"
        >
          <img
            alt=""
            src="test-file-stub"
            style="width: 70px;"
          />
          <h4>
            Steak
          </h4>
        </div>
        <div
          class="time-rating"
        >
          <p>
            ~30min
          </p>
          <div>
            <img
              alt=""
              src="undefined/media/img/Star.svg"
            />
            <p
              data-testid="item-rate"
            >
              4.9
            </p>
          </div>
        </div>
        <div
          class="price-add"
        >
          <h5
            data-testid="item-cost"
          >
            14
            <span>
              .99
            </span>
          </h5>
          <img
            alt=""
            src="test-file-stub"
            style="width: 45px; margin-left: 80px;"
          />
        </div>
      </div>
    </div>
    <div
      class="dish"
    >
      <img
        alt=""
        class="photo"
        src="undefinedhttp://127.0.0.1:8000/media/img/food/ChikenHell.png"
      />
      <img
        alt=""
        class="like"
        src="undefined/media/img/Heart.svg"
      />
      <div
        class="info"
      >
        <div
          class="item-cat"
        >
          <img
            alt=""
            src="test-file-stub"
            style="width: 70px;"
          />
          <h4>
            Cheeseburger
          </h4>
        </div>
        <div
          class="time-rating"
        >
          <p>
            ~30min
          </p>
          <div>
            <img
              alt=""
              src="undefined/media/img/Star.svg"
            />
            <p
              data-testid="item-rate"
            >
              4.9
            </p>
          </div>
        </div>
        <div
          class="price-add"
        >
          <h5
            data-testid="item-cost"
          >
            14
            <span>
              .99
            </span>
          </h5>
          <img
            alt=""
            src="test-file-stub"
            style="width: 45px; margin-left: 80px;"
          />
        </div>
      </div>
    </div>
    <div
      class="dish"
    >
      <img
        alt=""
        class="photo"
        src="undefinedhttp://127.0.0.1:8000/media/img/food/ChikenHell.png"
      />
      <img
        alt=""
        class="like"
        src="undefined/media/img/Heart.svg"
      />
      <div
        class="info"
      >
        <div
          class="item-cat"
        >
          <img
            alt=""
            src="test-file-stub"
            style="width: 70px;"
          />
          <h4>
            Chicken Hell
          </h4>
        </div>
        <div
          class="time-rating"
        >
          <p>
            ~30min
          </p>
          <div>
            <img
              alt=""
              src="undefined/media/img/Star.svg"
            />
            <p
              data-testid="item-rate"
            >
              4.8
            </p>
          </div>
        </div>
        <div
          class="price-add"
        >
          <h5
            data-testid="item-cost"
          >
            12
            <span>
              .99
            </span>
          </h5>
          <img
            alt=""
            src="test-file-stub"
            style="width: 45px; margin-left: 80px;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu-Items-List component matches the snapshot when no items found 1`] = `
<DocumentFragment>
  <div>
    <h2>
      No items found.
    </h2>
    <p>
      Please, try searching for something else.
    </p>
  </div>
</DocumentFragment>
`;

exports[`Menu-Items-List component matches the snapshot when restaurants found 1`] = `
<DocumentFragment>
  <div
    class="container"
    id="items-list"
  >
    <div
      class="rest-card"
    >
      <img
        alt=""
        class="rest-img"
        src="undefinedhttp://127.0.0.1:8000/media/img/rests/mcdonalds.jpg"
      />
      <div
        class="info"
      >
        <img
          alt=""
          src="test-file-stub"
          style="width: 70px;"
        />
        <div
          class="text"
        >
          <h4>
            The Burger King
          </h4>
          <div
            class="widgets"
          >
            <div
              class="time-rating"
            >
              <p>
                ~30min
              </p>
              <div>
                <img
                  alt=""
                  src="undefined/media/img/Star.svg"
                />
                <p>
                  4.9
                </p>
              </div>
            </div>
            <button>
              <img
                alt=""
                src="undefined/media/img/Bookmark.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rest-card"
    >
      <img
        alt=""
        class="rest-img"
        src="undefinedhttp://127.0.0.1:8000/media/img/rests/mcdonalds.jpg"
      />
      <div
        class="info"
      >
        <img
          alt=""
          src="test-file-stub"
          style="width: 70px;"
        />
        <div
          class="text"
        >
          <h4>
            Maurice
          </h4>
          <div
            class="widgets"
          >
            <div
              class="time-rating"
            >
              <p>
                ~30min
              </p>
              <div>
                <img
                  alt=""
                  src="undefined/media/img/Star.svg"
                />
                <p>
                  4.9
                </p>
              </div>
            </div>
            <button>
              <img
                alt=""
                src="undefined/media/img/Bookmark.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rest-card"
    >
      <img
        alt=""
        class="rest-img"
        src="undefinedhttp://127.0.0.1:8000/media/img/rests/burgerking.jpg"
      />
      <div
        class="info"
      >
        <img
          alt=""
          src="test-file-stub"
          style="width: 70px;"
        />
        <div
          class="text"
        >
          <h4>
            The Chicken King
          </h4>
          <div
            class="widgets"
          >
            <div
              class="time-rating"
            >
              <p>
                ~30min
              </p>
              <div>
                <img
                  alt=""
                  src="undefined/media/img/Star.svg"
                />
                <p>
                  4.8
                </p>
              </div>
            </div>
            <button>
              <img
                alt=""
                src="undefined/media/img/Bookmark.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
